force-app/main/default/src/objects/PJN_AE_Drug_Information__c/PJN_AE_Drug_Information__c.object-meta.xml
<CustomObject>
    <label>AE Drug</label>
    <nameField>
        <displayFormat>AE-D-{00000000}</displayFormat>
        <label>AE Drug Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AE Drug</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>