force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Active_Substance_Names__c.field-meta.xml
<CustomField>
    <fullName>PJN_Active_Substance_Names__c</fullName>
    <description>E2B (R2): B.4.k.2.2, activesubstancename (100AN)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Guidance: The International Nonproprietary Names (INN) for Pharmaceutical Substances or
drug substance name or drug identification code should be provided if no name exists. For
combination products, each active ingredient should be specified.</inlineHelpText>
    <label>Active Substance Names</label>
    <length>100</length>
    <type>Text</type>
</CustomField>