force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Additional_Information_on_Drug__c.field-meta.xml
<CustomField>
    <fullName>PJN_Additional_Information_on_Drug__c</fullName>
    <description>E2B (R2): B.4.k.19, drugadditional (100AN)

E2B (R3): G.k.11 Additional Information on Drug (free text)
Conformance: Optional
Data Type: 2000AN
OID: None
Value Allowed: Free text</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This should be used to specify any additional information pertinent to the case that is
not covered by above sections. This item can also be used to provide additional information concerning the indication for the drug.</inlineHelpText>
    <label>Additional Information on Drug</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>