force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_AE_Closed__c.field-meta.xml
<CustomField>
    <fullName>PJN_AE_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the related AE is closed. Used to trigger a record type change.</description>
    <label>AE Closed</label>
    <type>Checkbox</type>
</CustomField>