force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Anonymize__c.field-meta.xml
<CustomField>
    <fullName>PJN_Anonymize__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anonymize</label>
    <type>Checkbox</type>
</CustomField>