force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Batch_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Batch_Lot_Number__c</fullName>
    <description>E2B (R2): B.4.k.3, drugbatchnumb (35AN)

E2B (R3): G.k.4.r.7 Batch / Lot Number
Conformance: Optional
Data Type: 35AN
OID: None
Value Allowed:
Free text</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is particularly important for vaccines and biologicals. The section
allows for multiple batch or lot numbers, each separated by a delimiter defined by the transmission
standard chosen. The most specific information available should be provided.</inlineHelpText>
    <label>Batch/Lot Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>