force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Characterization_of_Drug_Role__c.field-meta.xml
<CustomField>
    <fullName>PJN_Characterization_of_Drug_Role__c</fullName>
    <description>E2B (R2): B.4.k.1, drugcharacterization (1N)

E2B (R3): G.k.1 Characterisation of Drug Role
Conformance: Required
Data Type: 1N
OID: 2.16.840.1.113883.3.989.2.1.1.13
Value Allowed:
1 = Suspect
2 = Concomitant
3 = Interacting
4 = Drug Not Administered</description>
    <inlineHelpText>Characterization of the drug as provided by primary reporter. All spontaneous
reports should have at least one suspect drug. If the reporter indicates a suspected
interaction, interacting should be selected. All interacting drugs are considered suspect.</inlineHelpText>
    <label>Characterization of Drug Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>