force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Country_Drug_Obtained__c.field-meta.xml
<CustomField>
    <fullName>PJN_Country_Drug_Obtained__c</fullName>
    <description>E2B (R2): obtaindrugcountry, B.4.k.2.3 (2A)

E2B (R3): G.k.2.4 Identification of the Country Where the Drug Was Obtained
Conformance: Optional
Data Type: 2A
OID: 1.0.3166.1.2.2
Value Allowed: ISO 3166-1 alpha-2, EU</description>
    <inlineHelpText>This data element captures the country where the medicinal was obtained.</inlineHelpText>
    <label>Country Drug Obtained</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HealthCloudGA__Countries</valueSetName>
    </valueSet>
</CustomField>