force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Country_of_Authorization_Application__c.field-meta.xml
<CustomField>
    <fullName>PJN_Country_of_Authorization_Application__c</fullName>
    <description>E2B (R2): B.4.k.4.2, drugauthorizationcountry (2A)

E2B (R3): G.k.3.2 Country of Authorisation / Application
Conformance: Optional, but required if G.k.3.1 is provided.
Data Type: 2A
OID: 1.0.3166.1.2.2
Value Allowed: ISO 3166-1 alpha-2, EU</description>
    <label>Country of Authorization/Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HealthCloudGA__Countries</valueSetName>
    </valueSet>
</CustomField>