force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Cumulative_Dose_First_Reaction_Unit__c.field-meta.xml
<CustomField>
    <fullName>PJN_Cumulative_Dose_First_Reaction_Unit__c</fullName>
    <description>E2B (R2): B.4.k.5.7, drugcumulativedosageunit (3AN)

E2B (R3): G.k.5b Cumulative Dose to First Reaction (unit)
Conformance: Optional, but required if G.k.5a is populated.
Data Type: 50AN
OID: 2.16.840.1.113883.3.989.2.1.1.25
Value Allowed: Constrained UCUM codes: {DF}</description>
    <inlineHelpText>The cumulative dose provided is the total dose administered until the first sign, symptom, or reaction.</inlineHelpText>
    <label>Cumulative Dose to First Reaction (Unit)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_AE_Dosage_Units</valueSetName>
    </valueSet>
</CustomField>