force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Date_of_Last_Administration__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_of_Last_Administration__c</fullName>
    <description>E2B (R2): B.4.k.14a, drugenddateformat (3N) --&gt; Value should be 102 AND B.4.k.14b, drugenddate (8N) --&gt; convert to CCYYMMDD

E2B (R3): G.k.4.r.5 Date and Time of Last Administration
Conformance: Optional
Data Type: Date / Time
OID: None
Value Allowed:
nullFlavor: MSK, ASKU, NASK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>For ongoing drug administration after the onset of the reaction or event, this item
should be blank and Actions taken with drug should be used.</inlineHelpText>
    <label>Date of Last Administration</label>
    <type>Date</type>
</CustomField>