force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Dosage_Form__c.field-meta.xml
<CustomField>
    <fullName>PJN_Dosage_Form__c</fullName>
    <description>E2B (R2): B.4.k.7, drugdosageform (50AN)

E2B (R3):  G.k.4.r.9.1 Pharmaceutical Dose Form (free text)
Conformance: Optional
Data Type: 60 AN
OID: None
Value Allowed:
Free text
nullFlavor: ASKU, NASK, UNK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>e.g., tablets, capsules, syrup</inlineHelpText>
    <label>Dosage Form</label>
    <length>60</length>
    <type>Text</type>
</CustomField>