force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Dosage_Interval__c.field-meta.xml
<CustomField>
    <fullName>PJN_Dosage_Interval__c</fullName>
    <description>E2B (R2): B.4.k.5.4, drugintervaldosageunitnumber (3N)

E2B (R3): G.k.4.r.2 Number of Units in the Interval
Conformance: Optional
Data Type: 4N
OID: None
Value Allowed: Numeric</description>
    <inlineHelpText>Example: 5 mg 2 times a day every other day for 30 days
Dose (number): 5
Dose (unit): mg
Interval: 2
Interval Unit: day
Cumulative Dose to First Reaction (number): 150
Cumulative Dose to First Reaction (unit): mg</inlineHelpText>
    <label>Dosage Interval</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>