force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Dosage_Text__c.field-meta.xml
<CustomField>
    <fullName>PJN_Dosage_Text__c</fullName>
    <description>E2B (R2): B.4.k.6, drugdosagetext (100AN)

E2B (R3): G.k.4.r.8 Dosage Text
Conformance: Optional
Data Type: 2000AN
OID: None
Value Allowed: Free text</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This item should be used in cases where provision of structured dosage information
is impossible.</inlineHelpText>
    <label>Dosage Text</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>