force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Dose_number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Dose_number__c</fullName>
    <description>E2B (R2): B.4.k.5.1, drugstructuredosagenumb (8N)

E2B (R3): G.k.4.r.1a Dose (number)
Conformance: Optional
Data Type: 8N
OID: None
Value Allowed: Numeric</description>
    <inlineHelpText>Example: 5 mg 2 times a day every other day for 30 days
Dose (number): 5
Dose (unit): mg
Interval: 2
Interval Unit: day
Cumulative Dose to First Reaction (number): 150
Cumulative Dose to First Reaction (unit): mg</inlineHelpText>
    <label>Dose (Number)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>