force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Dose_Units__c.field-meta.xml
<CustomField>
    <fullName>PJN_Dose_Units__c</fullName>
    <description>E2B (R2): B.4.k.5.2, drugstructuredosageunit (3N)

E2B (R3): G.k.4.r.1b Dose (unit)
Conformance: Optional, but required if G.k.4.r.1a is populated.
Data Type: 50AN
OID: 2.16.840.1.113883.3.989.2.1.1.25
Value Allowed: Constrained UCUM codes: {DF}</description>
    <inlineHelpText>Example: 5 mg 2 times a day every other day for 30 days
Dose (number): 5
Dose (unit): mg
Interval: 2
Interval Unit: day
Cumulative Dose to First Reaction (number): 150
Cumulative Dose to First Reaction (unit): mg</inlineHelpText>
    <label>Dose (Units)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_AE_Dosage_Units</valueSetName>
    </valueSet>
</CustomField>