force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Duration_of_Drug_Administration__c.field-meta.xml
<CustomField>
    <fullName>PJN_Duration_of_Drug_Administration__c</fullName>
    <description>E2B (R2): B.4.k.15a, drugtreatmentduration (5N)

E2B (R3): G.k.4.r.6a Duration of Drug Administration (number)
Conformance: Optional, but required if G.k.4.r.6b is populated.
Data Type: 5N
OID: None
Value Allowed: Numeric</description>
    <inlineHelpText>This item should be used if exact dates of drug administration are unavailable at the time of the report, but there is information concerning the duration of drug administration.  The information requested is the overall duration of drug administration.</inlineHelpText>
    <label>Duration of Drug Administration</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>