force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Duration_of_Drug_Administration_Unit__c.field-meta.xml
<CustomField>
    <fullName>PJN_Duration_of_Drug_Administration_Unit__c</fullName>
    <description>E2B (R2): B.4.k.15b, drugtreatmentdurationunit (3N)

E2B (R3): G.k.4.r.6b Duration of Drug Administration (unit)
Conformance: Optional, but required if G.k.4.r.6a is populated.
Data Type: 50AN
OID: 2.16.840.1.113883.3.989.2.1.1.26
Value Allowed: Constrained UCUM codes</description>
    <inlineHelpText>This item should be used if exact dates of drug administration are unavailable at the time of the report, but there is information concerning the duration of drug administration.  The information requested is the overall duration of drug administration.</inlineHelpText>
    <label>Duration of Drug Administration (Unit)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_AE_Time_Units</valueSetName>
    </valueSet>
</CustomField>