force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Gestation_Period_at_Time_of_Exposure__c.field-meta.xml
<CustomField>
    <fullName>PJN_Gestation_Period_at_Time_of_Exposure__c</fullName>
    <description>E2B (R2): B.4.k.10a, reationgestationperiod (3N)

E2B (R3): G.k.6a Gestation Period at Time of Exposure (number)
Conformance: Optional, but required if G.k.6b is populated.
Data Type: 3N
OID: None
Value Allowed: Numeric</description>
    <inlineHelpText>Use the gestational age at the time of the earliest exposure. Gestation period at time
of exposure should be expressed by providing both a number and designation of units of days, weeks,
months, or trimester.</inlineHelpText>
    <label>Gestation Period at Time of Exposure</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>