force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_If_Yes_which_Reactions_Recurred__c.field-meta.xml
<CustomField>
    <fullName>PJN_If_Yes_which_Reactions_Recurred__c</fullName>
    <description>E2B (R2): B.4.k.17.2b, drugrecuraction (250AN)

E2B (R3): NA</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Unknown indicates that a rechallenge was done, but it is unknown if the event
recurred. This segment should not be completed if it is unknown whether a rechallenge was done.</inlineHelpText>
    <label>If Yes, which Reactions Recurred?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>