force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Indication_for_use_in_the_case__c.field-meta.xml
<CustomField>
    <fullName>PJN_Indication_for_use_in_the_case__c</fullName>
    <description>E2B (R2): B.4.k.11b, drugindication (250AN)

E2B (R3): G.k.7.r.1 Indication as Reported by the Primary Source
Conformance: Optional
Data Type: 250AN
OID: None
Value Allowed:
Free text
nullFlavor: ASKU, NASK, UNK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The indication as reported. For multiple indications for the same drug, repeat the
entire drug entry, specifying the same drug for each indication.</inlineHelpText>
    <label>Indication for Use in the Case</label>
    <length>250</length>
    <type>Text</type>
</CustomField>