force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_MedDRA_for_Reactions_Recurred__c.field-meta.xml
<CustomField>
    <fullName>PJN_MedDRA_for_Reactions_Recurred__c</fullName>
    <description>E2B (R2): B.4.k.17.2a, drugrecuractionmeddraversion (8AN)

E2B (R3): NA</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Use MedDRA terms</inlineHelpText>
    <label>MedDRA Version for Reactions Recurred</label>
    <length>8</length>
    <type>Text</type>
</CustomField>