force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_MedDRA_Version_for_Indication__c.field-meta.xml
<CustomField>
    <fullName>PJN_MedDRA_Version_for_Indication__c</fullName>
    <description>E2B (R2): B.4.k.11a, drugindicationmeddraversion (8AN)

E2B (R3): G.k.7.r.2a MedDRA Version for Indication
Conformance: Optional, but required if G.k.7.r.2b is populated.
Data Type: 4AN
OID: None
Value Allowed: Numeric and ‘. ‘(dot)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The indication as reported. For multiple indications for the same drug, repeat the
entire drug entry, specifying the same drug for each indication.   MedDRA terms should be provided as code.</inlineHelpText>
    <label>MedDRA Version for Indication</label>
    <length>4</length>
    <type>Text</type>
</CustomField>