force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Name_of_Holder_Applicant__c.field-meta.xml
<CustomField>
    <fullName>PJN_Name_of_Holder_Applicant__c</fullName>
    <description>E2B (R2): B.4.k.4.3, drugauthorizationholder (60AN)

E2B (R3): G.k.3.3 Name of Holder / Applicant
Conformance: Optional
Data Type: 60AN
OID: None
Value Allowed: Free text</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of Holder/Applicant</label>
    <length>60</length>
    <type>Text</type>
</CustomField>