force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Product__c.field-meta.xml
<CustomField>
    <fullName>PJN_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>E2B (R2):  B.4.k.2.1, medicinalproduct (70AN)

E2B (R3): G.k.2.2 Medicinal Product Name as Reported by the Primary Source
Conformance: Required
Data Type: 250AN
OID: None
Value Allowed: Free text</description>
    <inlineHelpText>User Guidance: The name should be that used by the reporter. It is recognized that a single product
may have different proprietary names in different countries, even when produced by a single
manufacturer.</inlineHelpText>
    <label>Product</label>
    <referenceTo>CareProgramProduct</referenceTo>
    <relationshipLabel>AE Drug</relationshipLabel>
    <relationshipName>PJN_AE_Drug</relationshipName>
    <type>Lookup</type>
</CustomField>