force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Reaction_Recur_on_Readministration__c.field-meta.xml
<CustomField>
    <fullName>PJN_Reaction_Recur_on_Readministration__c</fullName>
    <description>E2B (R2): B.4.k.17.1, drugrecurreadministration (1N)

E2B (R3): G.k.9.i.4 Did Reaction Recur on Re-administration?
Conformance: Optional
Data Type: 1N
OID: 2.16.840.1.113883.3.989.2.1.1.16
Value Allowed:
1=yes – yes (rechallenge was done, reaction recurred)
2=yes – no (rechallenge was done, reaction did not recur)
3=yes – unk (rechallenge was done, outcome unknown)
4=no – n/a (no rechallenge was done, recurrence is not applicable)</description>
    <inlineHelpText>Unknown indicates that a rechallenge was done, but it is unknown if the event recurred. This segment should not be completed if it is unknown whether a rechallenge was done.</inlineHelpText>
    <label>Did Reaction Recur on Readministration?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_AE_Yes_No</valueSetName>
    </valueSet>
</CustomField>