force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Route_of_Administration__c.field-meta.xml
<CustomField>
    <fullName>PJN_Route_of_Administration__c</fullName>
    <description>E2B (R2): B.4.k.8, drugadministrationroute (3N)

E2B (R3): G.k.4.r.10.1 Route of Administration (free text)
Conformance: Optional
Data Type: 60 AN
OID: None
Value Allowed: Free text
nullFlavor: ASKU, NASK, UNK</description>
    <inlineHelpText>For a
parent-child or parent-fetus report, this indicates the route of administration of a drug given to the
child or fetus. This is usually an indirect exposure, such as transmammary, but can include more usual
routes of administration.</inlineHelpText>
    <label>Route of Administration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_AE_Routes_of_Administration</valueSetName>
    </valueSet>
</CustomField>