force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Start_of_Drug__c.field-meta.xml
<CustomField>
    <fullName>PJN_Start_of_Drug__c</fullName>
    <description>E2B (R2): B.4.k.12a, drugstartdateformat (3N) --&gt; Value should be 102 AND B.4.k.12a, drugstartdate (8N) --&gt; convert to CCYYMMDD

E2B (R3): G.k.4.r.4 Date and Time of Start of Drug
Conformance: Optional
Data Type: Date / Time
OID: None
Value Allowed:
nullFlavor: MSK, ASKU, NASK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>First date of use</inlineHelpText>
    <label>Start of Drug</label>
    <type>Date</type>
</CustomField>