force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Time_Between_Last_Dose_and_Reaction__c.field-meta.xml
<CustomField>
    <fullName>PJN_Time_Between_Last_Dose_and_Reaction__c</fullName>
    <description>E2B (R2): B.4.k.13.2a druglastperiod (5N)

E2B (R3): G.k.9.i.3.2a Time Interval between Last Dose of Drug and Start of Reaction / Event (number)
Conformance: Optional, but required if G.k.9.i.3.2b is populated.
Data Type: 5N
OID: None
Value Allowed: Numeric</description>
    <inlineHelpText>The major uses of intervals are to cover circumstances where both the dates are known but the interval is very short (e.g., minutes, such as in anaphylaxis) and when only imprecise dates are known but more information concerning the interval is known.</inlineHelpText>
    <label>Time Between Last Dose and Reaction</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>