force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Time_Between_Last_Dose_Reaction_Unit__c.field-meta.xml
<CustomField>
    <fullName>PJN_Time_Between_Last_Dose_Reaction_Unit__c</fullName>
    <description>E2B (R2): B.4.k.13.2b druglastperiodunit (3N)

E2B (R3): G.k.9.i.3.2b Time Interval between Last Dose of Drug and Start of Reaction / Event (unit)
Conformance: Optional, but required if G.k.9.i.3.2a is populated.
Data Type: 50AN
OID: 2.16.840.1.113883.3.989.2.1.1.26
Value Allowed: Constrained UCUM codes</description>
    <inlineHelpText>The major uses of intervals are to cover circumstances where both the dates are known but the interval is very short (e.g., minutes, such as in anaphylaxis) and when only imprecise dates are known but more information concerning the interval is known.</inlineHelpText>
    <label>Time Between Last Dose/Reaction (Unit)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_AE_Time_Units</valueSetName>
    </valueSet>
</CustomField>