force-app/main/default/src/objects/PJN_AE_Drug_Information__c/fields/PJN_Time_From_Start_of_Drug_to_Reaction__c.field-meta.xml
<CustomField>
    <fullName>PJN_Time_From_Start_of_Drug_to_Reaction__c</fullName>
    <description>E2B (R2): B.4.k.13.1a, drugstartperiod (5N)

E2B (R3): G.k.9.i.3.1a Time Interval between Beginning of Drug Administration and Start of Reaction / Event (number)
Conformance: Optional, but required if G.k.9.i.3.1b is populated.
Data Type: 5N
OID: None
Value Allowed: Numeric</description>
    <inlineHelpText>The major uses of intervals are to cover circumstances where both the dates are known but the interval is very short (e.g., minutes, such as in anaphylaxis) and when only imprecise dates are known but more information concerning the interval is known.</inlineHelpText>
    <label>Time Between Start of Drug and Reaction</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>