force-app/main/default/src/objects/PJN_AE_Drug_Information__c/recordTypes/PJN_AE_Drug_Closed.recordType-meta.xml
<RecordType>
    <fullName>PJN_AE_Drug_Closed</fullName>
    <active>true</active>
    <label>AE Drug - Closed</label>
</RecordType>